--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -27,5 +27,5 @@ production:
   admin_name: <%= ENV["ADMIN_NAME"] %>
   admin_email: <%= ENV["ADMIN_EMAIL"] %>
   admin_password: <%= ENV["ADMIN_PASSWORD"] %>
-  domain_name: lexito.herokuapp.com
+  domain_name: https://lexito.herokuapp.com
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
